--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,7 +6,7 @@
 
 .homeHeaderDiv {
   background-color: rgba(19, 19, 19, 0.25);
-  width: 35%;
+  width: 50%;
   margin: auto;
   border-radius: 10px;
 }
