--- a/src/components/Hobbies/style.css
+++ b/src/components/Hobbies/style.css
@@ -1,13 +1,21 @@
 .hobbies {
   margin-top: 30px;
+  background-color: rgb(39, 39, 39);
+  color: white;
+  border-radius: 10px;
+  padding-top: 30px;
 }
 
 .icon {
   width: 200px;
-  margin: 30px;
+  /* margin: 30px; */
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(210, 210, 210);
 }
 
 .hobbyText {
   font-size: 1rem;
+  margin: 20px;
   text-align: justify;
 }
